@@ -1,6 +1,7 @@
 proxtop (1.1.4-1) stable; urgency=medium
   * Fixed PSI collector not returning all metrics in non-verbose mode
   * Text printer now displays host-level metrics (PSI, CPU host stats, etc.)
+  * Added Mb/s and pkts/s rate metrics to physical network view
 
 proxtop (1.1.3-1) stable; urgency=medium
   * Fixed per interface network display showing no data for verbose fields
